--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,10 @@ header{
 
 .navbar{
   background: rgb(0,0,0);
-background: -moz-linear-gradient(87deg, rgba(0,0,0,1) 9%, rgba(155,34,195,1) 100%);
-background: -webkit-linear-gradient(87deg, rgba(0,0,0,1) 9%, rgba(155,34,195,1) 100%);
-background: linear-gradient(87deg, rgba(0,0,0,1) 9%, rgba(155,34,195,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#9b22c3",GradientType=1);
+background: -moz-linear-gradient(87deg, rgba(0,0,0,1) 8%, rgba(155,34,195,1) 52%, rgba(0,0,0,1) 93%);
+background: -webkit-linear-gradient(87deg, rgba(0,0,0,1) 8%, rgba(155,34,195,1) 52%, rgba(0,0,0,1) 93%);
+background: linear-gradient(87deg, rgba(0,0,0,1) 8%, rgba(155,34,195,1) 52%, rgba(0,0,0,1) 93%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#000000",GradientType=1);
 
 }
 
